--- a/examples/k8s/local/deployment_cpu-prereqs.yaml
+++ b/examples/k8s/local/deployment_cpu-prereqs.yaml
@@ -1,1 +1,8 @@
----
+apiVersion: v1
+kind: Secret
+metadata:
+  name: hf-token-secret
+  namespace: vllm
+type: Opaque
+data:
+  token: "<base64-HF-token>"   ### CHANGE ME
